tests/reference/asr-loop_03-401ab45.stderr
semantic error: Assignment to loop variable `i` is not allowed
 --> tests/errors/loop_03.py:5:9
  |
5 |         i=i*10
  |         ^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
